Hopefully white spaces fix

--- a/index Styling.css
+++ b/index Styling.css
@@ -30,6 +30,7 @@ body {
 /* NavBar */
 
 #navbar {
+  margin: auto;
     position: fixed;
     display: flex;
     background-color: white;
